# vadis_summarization_api

./: .gitignore  .sample.env  LICENSE  README.md  pyproject.toml
tests/: test_vadis_summarization_api.py
vadis_summarization_api/: main.py
